--- a/prática3/aprendizado-nao-supervisionado.ipynb
+++ b/prática3/aprendizado-nao-supervisionado.ipynb
@@ -1016,7 +1016,7 @@
     "ax[0].set_xlabel('Clusters')\n",
     "ax[0].grid()\n",
     "\n",
-    "ax[1].plot(range(min_clusters,max_clusters),f_out[min_clusters:max_clusters,],'ro-' ) #plot in the same graph as intra-cluster dispersion?\n",
+    "ax[1].plot(range(min_clusters,max_clusters),f_out[min_clusters:max_clusters,],'ro-' )\n",
     "ax[1].set_title(\"Inter Cluster Dispersion (Fout)\")\n",
     "ax[1].set_xlabel('Clusters')\n",
     "ax[1].grid()\n",
